--- a/Droid/LaunchDarkly.Xamarin.Droid.csproj
+++ b/Droid/LaunchDarkly.Xamarin.Droid.csproj
@@ -84,6 +84,9 @@
     <Reference Include="LaunchDarkly.Common">
       <HintPath>..\packages\LaunchDarkly.Common.1.0.1\lib\netstandard2.0\LaunchDarkly.Common.dll</HintPath>
     </Reference>
+    <Reference Include="LaunchDarkly.Xamarin">
+      <HintPath>..\packages\LaunchDarkly.Xamarin.1.0.0-beta8\lib\netstandard2.0\LaunchDarkly.Xamarin.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -107,12 +110,6 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\layout\list_item.axml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\xamarin-client-private\src\LaunchDarkly.Xamarin\LaunchDarkly.Xamarin.csproj">
-      <Project>{99424B65-DF04-44E7-92B1-C3B2FE274130}</Project>
-      <Name>LaunchDarkly.Xamarin</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets')" />
