--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -4,6 +4,7 @@
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="monoandroid81" />
   <package id="LaunchDarkly.Common" version="1.0.1" targetFramework="monoandroid81" />
   <package id="LaunchDarkly.EventSource" version="3.1.1" targetFramework="monoandroid81" />
+  <package id="LaunchDarkly.Xamarin" version="1.0.0-beta8" targetFramework="monoandroid81" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="monoandroid81" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid81" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid81" />
@@ -26,7 +27,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid81" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid81" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="monoandroid81" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid81" />
