--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -4,6 +4,7 @@
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="xamarinios10" />
   <package id="LaunchDarkly.Common" version="1.0.1" targetFramework="xamarinios10" />
   <package id="LaunchDarkly.EventSource" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="LaunchDarkly.Xamarin" version="1.0.0-beta8" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
