--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -2,9 +2,9 @@
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="monoandroid81" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="monoandroid81" />
-  <package id="LaunchDarkly.Common" version="1.2.3" targetFramework="monoandroid81" />
-  <package id="LaunchDarkly.EventSource" version="3.2.3" targetFramework="monoandroid81" />
-  <package id="LaunchDarkly.Xamarin" version="1.0.0-beta15" targetFramework="monoandroid81" />
+  <package id="LaunchDarkly.Common" version="2.0.0" targetFramework="monoandroid81" />
+  <package id="LaunchDarkly.EventSource" version="3.3.0" targetFramework="monoandroid81" />
+  <package id="LaunchDarkly.Xamarin" version="1.0.0-beta16" targetFramework="monoandroid81" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="monoandroid81" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="monoandroid81" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid81" />
@@ -56,12 +56,12 @@
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid81" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid81" />
   <package id="Xam.Plugin.DeviceInfo" version="4.1.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Annotations" version="28.0.0.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Compat" version="28.0.0.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="28.0.0.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.CustomTabs" version="28.0.0.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.1" targetFramework="monoandroid81" requireReinstallation="true" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.1" targetFramework="monoandroid81" requireReinstallation="true" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1.1" targetFramework="monoandroid81" requireReinstallation="true" />
+  <package id="Xamarin.Android.Support.Annotations" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
+  <package id="Xamarin.Android.Support.Compat" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
   <package id="Xamarin.Essentials" version="1.0.1" targetFramework="monoandroid81" />
 </packages>
