--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -4,7 +4,7 @@
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="monoandroid81" />
   <package id="LaunchDarkly.Common" version="2.0.0" targetFramework="monoandroid81" />
   <package id="LaunchDarkly.EventSource" version="3.3.0" targetFramework="monoandroid81" />
-  <package id="LaunchDarkly.Xamarin" version="1.0.0-beta16" targetFramework="monoandroid81" />
+  <package id="LaunchDarkly.XamarinSdk" version="1.0.0-beta17" targetFramework="monoandroid81" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="monoandroid81" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="monoandroid81" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid81" />
