--- a/iOS/LaunchDarkly.Xamarin.iOS.csproj
+++ b/iOS/LaunchDarkly.Xamarin.iOS.csproj
@@ -81,9 +81,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
-    <Reference Include="Xamarin.Essentials">
-      <HintPath>..\packages\Xamarin.Essentials.1.0.1\lib\xamarinios10\Xamarin.Essentials.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Common.Logging.Core">
       <HintPath>..\packages\Common.Logging.Core.3.4.1\lib\netstandard1.0\Common.Logging.Core.dll</HintPath>
@@ -99,14 +96,16 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors" />
     <Reference Include="LaunchDarkly.EventSource">
-      <HintPath>..\packages\LaunchDarkly.EventSource.3.2.3\lib\netstandard1.4\LaunchDarkly.EventSource.dll</HintPath>
+      <HintPath>..\packages\LaunchDarkly.EventSource.3.3.0\lib\netstandard1.4\LaunchDarkly.EventSource.dll</HintPath>
     </Reference>
-    <Reference Include="LaunchDarkly.Common">
-      <HintPath>..\packages\LaunchDarkly.Common.1.2.3\lib\netstandard2.0\LaunchDarkly.Common.dll</HintPath>
+    <Reference Include="LaunchDarkly.CommonSdk">
+      <HintPath>..\packages\LaunchDarkly.CommonSdk.2.1.2\lib\netstandard2.0\LaunchDarkly.CommonSdk.dll</HintPath>
     </Reference>
-    <Reference Include="LaunchDarkly.Xamarin">
-      <HintPath>..\packages\LaunchDarkly.Xamarin.1.0.0-beta15\lib\netstandard2.0\LaunchDarkly.Xamarin.dll</HintPath>
+    <Reference Include="LaunchDarkly.XamarinSdk">
+      <HintPath>..\packages\LaunchDarkly.XamarinSdk.1.0.0-beta17\lib\xamarinios10\LaunchDarkly.XamarinSdk.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
