--- a/iOS/LaunchDarkly.Xamarin.iOS.csproj
+++ b/iOS/LaunchDarkly.Xamarin.iOS.csproj
@@ -98,14 +98,17 @@
     </Reference>
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
+    <Reference Include="System.Collections.Immutable">
+      <HintPath>..\packages\System.Collections.Immutable.1.5.0\lib\netstandard2.0\System.Collections.Immutable.dll</HintPath>
+    </Reference>
     <Reference Include="LaunchDarkly.EventSource">
       <HintPath>..\packages\LaunchDarkly.EventSource.3.3.0\lib\netstandard1.4\LaunchDarkly.EventSource.dll</HintPath>
     </Reference>
     <Reference Include="LaunchDarkly.CommonSdk">
-      <HintPath>..\packages\LaunchDarkly.CommonSdk.2.1.2\lib\netstandard2.0\LaunchDarkly.CommonSdk.dll</HintPath>
+      <HintPath>..\packages\LaunchDarkly.CommonSdk.3.0.0-beta2\lib\netstandard2.0\LaunchDarkly.CommonSdk.dll</HintPath>
     </Reference>
     <Reference Include="LaunchDarkly.XamarinSdk">
-      <HintPath>..\packages\LaunchDarkly.XamarinSdk.1.0.0-beta18\lib\xamarinios10\LaunchDarkly.XamarinSdk.dll</HintPath>
+      <HintPath>..\packages\LaunchDarkly.XamarinSdk.1.0.0-beta19\lib\xamarinios10\LaunchDarkly.XamarinSdk.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
