--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -2,9 +2,9 @@
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="xamarinios10" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="xamarinios10" />
-  <package id="LaunchDarkly.CommonSdk" version="2.1.2" targetFramework="xamarinios10" />
+  <package id="LaunchDarkly.CommonSdk" version="3.0.0-beta2" targetFramework="xamarinios10" />
   <package id="LaunchDarkly.EventSource" version="3.3.0" targetFramework="xamarinios10" />
-  <package id="LaunchDarkly.XamarinSdk" version="1.0.0-beta18" targetFramework="xamarinios10" />
+  <package id="LaunchDarkly.XamarinSdk" version="1.0.0-beta19" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
@@ -13,6 +13,7 @@
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="xamarinios10" />
   <package id="System.Console" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
