--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -2,9 +2,9 @@
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="monoandroid81" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="monoandroid81" />
-  <package id="LaunchDarkly.CommonSdk" version="3.0.0-beta2" targetFramework="monoandroid90" />
-  <package id="LaunchDarkly.EventSource" version="3.3.0" targetFramework="monoandroid90" />
-  <package id="LaunchDarkly.XamarinSdk" version="1.0.0-beta19" targetFramework="monoandroid90" />
+  <package id="LaunchDarkly.CommonSdk" version="4.0.1" targetFramework="monoandroid90" />
+  <package id="LaunchDarkly.EventSource" version="3.3.1" targetFramework="monoandroid90" />
+  <package id="LaunchDarkly.XamarinSdk" version="1.0.0" targetFramework="monoandroid90" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="monoandroid81" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="monoandroid81" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid81" />
@@ -56,7 +56,6 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid81" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid81" />
-  <package id="Xam.Plugin.DeviceInfo" version="4.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.1" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Arch.Core.Runtime" version="1.1.1.1" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.1" targetFramework="monoandroid90" />
@@ -84,5 +83,4 @@
   <package id="Xamarin.Android.Support.SwipeRefreshLayout" version="28.0.0.1" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Support.VersionedParcelable" version="28.0.0.1" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Support.ViewPager" version="28.0.0.1" targetFramework="monoandroid90" />
-  <package id="Xamarin.Essentials" version="1.0.1" targetFramework="monoandroid81" />
 </packages>
