--- a/iOS/LaunchDarkly.Xamarin.iOS.csproj
+++ b/iOS/LaunchDarkly.Xamarin.iOS.csproj
@@ -90,9 +90,6 @@
     <Reference Include="Common.Logging">
       <HintPath>..\packages\Common.Logging.3.4.1\lib\netstandard1.3\Common.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="Plugin.DeviceInfo">
-      <HintPath>..\packages\Xam.Plugin.DeviceInfo.4.1.1\lib\xamarinios10\Plugin.DeviceInfo.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -102,13 +99,13 @@
       <HintPath>..\packages\System.Collections.Immutable.1.5.0\lib\netstandard2.0\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="LaunchDarkly.EventSource">
-      <HintPath>..\packages\LaunchDarkly.EventSource.3.3.0\lib\netstandard1.4\LaunchDarkly.EventSource.dll</HintPath>
+      <HintPath>..\packages\LaunchDarkly.EventSource.3.3.1\lib\netstandard1.4\LaunchDarkly.EventSource.dll</HintPath>
     </Reference>
     <Reference Include="LaunchDarkly.CommonSdk">
-      <HintPath>..\packages\LaunchDarkly.CommonSdk.3.0.0-beta2\lib\netstandard2.0\LaunchDarkly.CommonSdk.dll</HintPath>
+      <HintPath>..\packages\LaunchDarkly.CommonSdk.4.0.1\lib\netstandard2.0\LaunchDarkly.CommonSdk.dll</HintPath>
     </Reference>
     <Reference Include="LaunchDarkly.XamarinSdk">
-      <HintPath>..\packages\LaunchDarkly.XamarinSdk.1.0.0-beta19\lib\xamarinios10\LaunchDarkly.XamarinSdk.dll</HintPath>
+      <HintPath>..\packages\LaunchDarkly.XamarinSdk.1.0.0\lib\xamarinios10\LaunchDarkly.XamarinSdk.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -130,7 +127,6 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="JsonReader.cs" />
     <Compile Include="FeatureFlagCell.cs" />
     <Compile Include="FeatureFlagCell.designer.cs">
       <DependentUpon>FeatureFlagCell.cs</DependentUpon>
