--- a/iOSApp/iOSApp.csproj
+++ b/iOSApp/iOSApp.csproj
@@ -127,15 +127,12 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="FeatureFlagCell.cs" />
-    <Compile Include="FeatureFlagCell.designer.cs">
-      <DependentUpon>FeatureFlagCell.cs</DependentUpon>
-    </Compile>
     <Compile Include="MainCollectionViewController.cs" />
     <Compile Include="MainCollectionViewController.designer.cs">
       <DependentUpon>MainCollectionViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
+  <Import Project="..\Shared\Shared.projitems" Label="Shared" Condition="Exists('..\Shared\Shared.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
 </Project>
