--- a/XamarinAndroidApp/XamarinAndroidApp.csproj
+++ b/XamarinAndroidApp/XamarinAndroidApp.csproj
@@ -7,7 +7,7 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <RootNamespace>LaunchDarkly.Xamarin.Example</RootNamespace>
-    <AssemblyName>LaunchDarkly.Xamarin.Droid</AssemblyName>
+    <AssemblyName>LaunchDarkly.Xamarin.AndroidApp</AssemblyName>
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
@@ -43,44 +43,15 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
     <Reference Include="System.Xml" />
-    <PackageReference Include="Common.Logging" Version="3.4.1" />
-    <PackageReference Include="Common.Logging.Core" Version="3.4.1" />
-    <PackageReference Include="LaunchDarkly.CommonSdk" Version="4.0.1" />
-    <PackageReference Include="LaunchDarkly.EventSource" Version="3.3.1" />
     <PackageReference Include="LaunchDarkly.XamarinSdk" Version="1.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Plugin.CurrentActivity" Version="2.1.0.1" />
-    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
-    <PackageReference Include="Xamarin.Android.Arch.Core.Common" Version="1.1.1.1" />
     <PackageReference Include="Xamarin.Android.Arch.Core.Runtime" Version="1.1.1.1" />
-    <PackageReference Include="Xamarin.Android.Arch.Lifecycle.Common" Version="1.1.1.1" />
     <PackageReference Include="Xamarin.Android.Arch.Lifecycle.LiveData" Version="1.1.1.1" />
-    <PackageReference Include="Xamarin.Android.Arch.Lifecycle.Runtime" Version="1.1.1.1" />
     <PackageReference Include="Xamarin.Android.Arch.Lifecycle.ViewModel" Version="1.1.1.1" />
-    <PackageReference Include="Xamarin.Android.Support.Annotations" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.AsyncLayoutInflater" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.Collections" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.Compat" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.CoordinaterLayout" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.Core.UI" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.CursorAdapter" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.CustomTabs" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.CustomView" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.DocumentFile" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.DrawerLayout" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.Interpolator" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.Loader" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.LocalBroadcastManager" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.Print" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.SlidingPaneLayout" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.SwipeRefreshLayout" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.VersionedParcelable" Version="28.0.0.1" />
-    <PackageReference Include="Xamarin.Android.Support.ViewPager" Version="28.0.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -89,7 +60,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
-    <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml" />
