--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,5 +71,19 @@ jobs:
           command: msbuild /restore /p:Configuration=Debug XamarinAndroidApp/XamarinAndroidApp.csproj
 
       - run:
+          name: Pre-build storyboard for iOS app
+          # This step is a workaround for a problem we've encountered in trying to build Xamarin iOS
+          # projects in the CI environment. For unknown reasons, ibtool can fail during the project
+          # build with the error "Requested but did not find required plug-in with identifier
+          # com.apple.rc.RCIDESupportCore" unless we have first invoked the exact same ibtool
+          # command separately like this. The error does not occur in regular local builds.
+          command: >-
+            /Applications/Xcode.app/Contents/Developer/usr/bin/ibtool --errors --warnings --notices --output-format xml1 --minimum-deployment-target 10.0
+            --target-device iphone --target-device ipad --auto-activate-custom-fonts
+            --sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator14.4.sdk
+            --compilation-directory /Users/distiller/project/XamarinIOSApp/obj/iPhoneSimulator/Debug/xamarin.ios10/ibtool
+            /Users/distiller/project/XamarinIOSApp/LaunchScreen.storyboard
+
+      - run:
           name: Build XamarinIOsApp
           command: msbuild /restore /p:Configuration=Debug XamarinIOsApp/XamarinIOsApp.csproj
