--- a/DotNetConsoleApp/DotNetConsoleApp.csproj
+++ b/DotNetConsoleApp/DotNetConsoleApp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LaunchDarkly.XamarinSdk" Version="1.*" />
+    <PackageReference Include="LaunchDarkly.ClientSdk" Version="2.0.0-rc.1" />
   </ItemGroup>
   <Import Project="..\Shared\Shared.projitems" Label="Shared" Condition="Exists('..\Shared\Shared.projitems')" />
 </Project>
