--- a/XamarinAndroidApp/XamarinAndroidApp.csproj
+++ b/XamarinAndroidApp/XamarinAndroidApp.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
     <Reference Include="System.Xml" />
-    <PackageReference Include="LaunchDarkly.ClientSdk" Version="2.0.0-rc.1" />
+    <PackageReference Include="LaunchDarkly.ClientSdk" Version="2.*" />
     <PackageReference Include="Xamarin.Android.Arch.Core.Runtime" Version="1.1.1.1" />
     <PackageReference Include="Xamarin.Android.Arch.Lifecycle.LiveData" Version="1.1.1.1" />
     <PackageReference Include="Xamarin.Android.Arch.Lifecycle.ViewModel" Version="1.1.1.1" />
