--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ workflows:
 jobs:
   build-run-linux:
     docker:
-      - image: mcr.microsoft.com/dotnet/core/sdk:2.1-focal
+      - image: mcr.microsoft.com/dotnet/core/sdk:3.1-focal
     steps:
       - checkout
 
@@ -47,7 +47,7 @@ jobs:
           name: run demo
           command: |
             dotnet run --project DotNetConsoleApp | tee output.txt
-            grep "is True for this user" output.txt || (echo "Flag did not evaluate to expected true value" && exit 1)
+            grep "is True for this context" output.txt || (echo "Flag did not evaluate to expected true value" && exit 1)
 
   build-macos:
     macos: # We're using a Mac host because that's the only way to build for Xamarin iOS
