update for 3.x API (#11)

--- a/DotNetConsoleApp/DotNetConsoleApp.csproj
+++ b/DotNetConsoleApp/DotNetConsoleApp.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LaunchDarkly.ClientSdk" Version="2.*" />
+    <PackageReference Include="LaunchDarkly.ClientSdk" Version="3.0.0-alpha.2" />
   </ItemGroup>
   <Import Project="..\Shared\Shared.projitems" Label="Shared" Condition="Exists('..\Shared\Shared.projitems')" />
 </Project>
