use latest 3.x release

--- a/DotNetConsoleApp/DotNetConsoleApp.csproj
+++ b/DotNetConsoleApp/DotNetConsoleApp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LaunchDarkly.ClientSdk" Version="3.0.0-alpha.2" />
+    <PackageReference Include="LaunchDarkly.ClientSdk" Version="3.*" />
   </ItemGroup>
   <Import Project="..\Shared\Shared.projitems" Label="Shared" Condition="Exists('..\Shared\Shared.projitems')" />
 </Project>
